--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
             ></path>
           </svg>
         </div>
-        <span class="text-white text-xl font-bold tracking-tight">Mack Media</span>
       </div>
 
       <nav class="hidden md:flex items-center gap-10">
@@ -376,8 +375,7 @@
               Every wedding is different. Every story deserves to be told honestly.
             </h2>
             <p class="text-text-sub font-display">
-              If you searched “wedding photographer near me” and landed here — you’re in the right place.
-              We serve Indianapolis and surrounding areas with story-first wedding photography.
+              If you're looking for a high-quality, reliable wedding photographer to capture your big day, you're in the right place.
             </p>
           </div>
 
@@ -389,57 +387,87 @@
             Check Availability <span class="material-symbols-outlined">arrow_forward</span>
           </button>
         </div>
+<div class="mb-10">
+  <div class="bg-neutral-grey rounded-2xl overflow-hidden border border-neutral-grey">
+    <div class="p-6 md:p-8 flex flex-col md:flex-row md:items-end md:justify-between gap-6">
+      <div class="max-w-2xl">
+        <p class="text-text-sub uppercase tracking-[0.2em] text-xs font-bold mb-3 font-display">
+          Quick Highlight
+        </p>
+        <h3 class="text-2xl md:text-3xl font-bold">
+          A 30-Second Look at Our Style
+        </h3>
+        <p class="text-text-sub text-sm font-display mt-2">
+          Real moments, timeless edits, story-first coverage.
+        </p>
+      </div>
 
-        <div class="columns-1 md:columns-2 lg:columns-3 gap-6 space-y-6">
-          <div class="relative overflow-hidden rounded-xl bg-neutral-grey">
-            <img
-              class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
-              alt="Bride walking down the aisle"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuDk-gshh53ZLM4IDOfVnGdvGGj5Bm4UJBk7gEd2mFVIS5GLUo-TDlu9MmmzQRGvX3T-KJ35T4VQq6gAstCSl2R7K1a5pEFDhKWfOOiZqqJzTFwv3trXk5OaP_lffco5Us0uC-08OWa96PC3pry-8DgdjPn4qJAS5SDhAzxHvSM_nZ_1bs3oiLV5ayatOt9NVZV_idtlKFVRG0O-HijbdFp1y8KlJ0ba2OGZwzRxeoEIP8ASEH7dC4Ecc7TACFqeCG0TIhE8m3Uceg"
-              loading="lazy"
-            />
-          </div>
-          <div class="relative overflow-hidden rounded-xl bg-neutral-grey">
-            <img
-              class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
-              alt="Wedding rings close up"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuDNSTJ2tqYUzCcL7Y7tdGsXUEcgUEVB2NjfkEixzW9DTc2hH03wI6zHAXkQFBjV5ZElZNKJLCliOSfXu3RfXFjA2_dCQN8ZxoYaxuXJ8G1OnesUEmGVdZ4zDA6dGJ5iIzxyxAF3GlkB1tHRgrDhjvD0jd3cY1ODTl3sWuMg1KMzKA8oz3igFXfZkUVbrgavkFIRlHcdHXxpqN1JHNuqzdtqrv0M5aGvMO7LQUI4_ZRWMrl4kNTxyew_FP_rGzW38THt1EsbgbuTLg"
-              loading="lazy"
-            />
-          </div>
-          <div class="relative overflow-hidden rounded-xl bg-neutral-grey">
-            <img
-              class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
-              alt="Couple kissing in a rainy city street"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuAzOifOn_VSGqFNeGoL46Nn2LUUcxvDnhpx9VAgj-sx2Kpo1eHwZN3n4VE_8qauQDiszd5mVaSp4BHivT5FeZdd9C4_dQ6t6rVPCEI8liBAxIDuDiee5Rg2Gg6nWAOfeVsX5vjr6AvYUE8Kflu_PxHumsr36MI4hBSXymajk0KT6eVMHdVJ3T4amwnbNcuX5cdHyA49SI1i57RxSqH4bLMW8_E2DM7QT7fsYlN3KHZte7PDtkaFZdqqt-dxTEZw3uqLYhp_uvGGig"
-              loading="lazy"
-            />
-          </div>
-          <div class="relative overflow-hidden rounded-xl bg-neutral-grey">
-            <img
-              class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
-              alt="Groom whispering to bride"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuBsWasxcLcpb1Hl98qAa02hTRrli8qdd594Oujj83R4VY_4Q1gvWFAP7aXcaZBZHKXx11-TmWjUrh3ZAKQXmZXmrrEr_Jq5kBF9oYFffj7JfI_ciF1qF2KEEyTYXkiQGzr_ckYDeeBs6J3s1Tdvyfn2pucxe-vswlA5_mm4VxPI2_BJL1i01LUQTj5FLmgkbDYbzTfP-oAEW00p2pvtoiOqbA8Y9uaLVb_91dQ6I0HbjF7xw2_0x8WqCekuM99_lWTxUX3AMj7qSA"
-              loading="lazy"
-            />
-          </div>
-          <div class="relative overflow-hidden rounded-xl bg-neutral-grey">
-            <img
-              class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
-              alt="Wedding dance party wide shot"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuAfM-VE1GlforNCqGbSc-j1f0MoZ0JUrBGAk1Yik53RJ_E9_eOOyR42XhxntqkUIYeoK1mQbMS19dHZ7-okVIS54nT9u8yKawoPgqWVdMjonlm5FmRZNsjc799r1gXQ_uFzASZe2q5LIK9ayfp9m0If5yOXnAF33pKadPM4y1nxtPI4NPQDwpnPyD_qjU6TtxlXMtTebC3nqLW7vw2v9USSZ26uUsgyKSP8aHgzZmOCY6x3yKhSznIWPu6ShrFQftfB_4bO3v7vcg"
-              loading="lazy"
-            />
-          </div>
-          <div class="relative overflow-hidden rounded-xl bg-neutral-grey">
-            <img
-              class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
-              alt="Bride emotional close up"
-              src="https://lh3.googleusercontent.com/aida-public/AB6AXuAOAkIt0EdAxbzJs3NeJthIYYayRX5O6geCIsz9BWMYL6ER_ILFpbM0ANuKNZhIk0KiZLW2peW21ciVGWlUt8S-MaIVB-0I56YKKd_isgVlEnituffJZ_tCSdRO0RMtmC-z6tnDdDvdV3IxZ75kUuqRGI0a6x8G1Vuu31AIvCCw6rARQVNWNZxB1r6PIlv3pvXLTTn1my1Dv8xy8n5BJfkck1nebzX-7O-zGKLpLi_xp6TKKLtPN7SMjworHFrVuGLJxdH9YXBUuw"
-              loading="lazy"
-            />
-          </div>
-        </div>
+      <button
+        type="button"
+        data-scroll="availability"
+        class="bg-primary text-black px-7 py-3 rounded-xl font-bold hover:bg-primary/90 transition-all"
+      >
+        Check Availability
+      </button>
+    </div>
+
+    <div class="bg-black">
+      <video
+        class="w-full h-auto"
+        controls
+        playsinline
+        preload="metadata"
+        poster="VIDEO_POSTER.jpg"
+      >
+        <source src="REEL_VIDEO.mp4" type="video/mp4" />
+      </video>
+    </div>
+  </div>
+</div>
+
+<!-- Portfolio Grid -->
+<div id="portfolioGrid" class="columns-1 md:columns-2 lg:columns-3 gap-6 space-y-6">
+
+  <!-- VISIBLE IMAGES (keep your current 6, just add the class) -->
+  <div class="portfolio-item relative overflow-hidden rounded-xl bg-neutral-grey">
+    <img
+      class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
+      alt="Bride walking down the aisle"
+      src="YOUR_EXISTING_IMAGE_1.jpg"
+      loading="lazy"
+    />
+  </div>
+
+  <!-- repeat for your other 5 existing images -->
+  <!-- just add class="portfolio-item" to each wrapper -->
+
+  <!-- HIDDEN IMAGES (add new ones below) -->
+  <div class="portfolio-item hidden relative overflow-hidden rounded-xl bg-neutral-grey">
+    <img
+      class="w-full hover:scale-105 transition-transform duration-500 cursor-pointer"
+      alt="Wedding couple portrait"
+      src="NEW_IMAGE_7.jpg"
+      loading="lazy"
+    />
+  </div>
+
+  <!-- add as many hidden portfolio-item blocks as you want -->
+</div>
+
+<!-- LOAD MORE BUTTON -->
+<div class="mt-10 flex flex-col items-center gap-3">
+  <button
+    id="loadMoreBtn"
+    type="button"
+    class="bg-primary text-black px-10 py-4 rounded-lg font-bold text-lg hover:bg-primary/90 transition-all shadow-lg"
+  >
+    Load More Photos
+  </button>
+  <p id="loadMoreHint" class="text-[11px] text-text-sub font-display">
+    Showing a few highlights — click to see more.
+  </p>
+</div>
+
 
         <div class="mt-14 text-center">
           <button
@@ -500,42 +528,6 @@
             </button>
           </div>
 
-          <!-- Signature -->
-          <div class="bg-white p-10 rounded-2xl shadow-xl flex flex-col border-2 border-primary relative transform md:scale-105 z-10">
-            <div class="absolute -top-4 left-1/2 -translate-x-1/2 bg-primary text-black px-4 py-1 rounded-full text-[10px] font-bold uppercase tracking-widest font-display">
-              Most Popular
-            </div>
-            <h3 class="text-2xl font-bold mb-2">Signature</h3>
-            <p class="text-text-sub text-sm mb-6 font-display">Full-day storytelling for couples who don’t want missed moments.</p>
-            <div class="text-5xl font-bold mb-8 text-primary">
-              $3,200 <span class="text-sm text-text-sub font-normal font-display">Average</span>
-            </div>
-            <ul class="space-y-4 mb-10 flex-grow font-display">
-              <li class="flex items-center gap-2 text-sm text-text-main font-semibold">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Full-day or extended coverage options
-              </li>
-              <li class="flex items-center gap-2 text-sm text-text-main font-semibold">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Second shooter options available
-              </li>
-              <li class="flex items-center gap-2 text-sm text-text-main font-semibold">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Clean, timeless editing
-              </li>
-              <li class="flex items-center gap-2 text-sm text-text-main font-semibold">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Sneak peeks + clear delivery timeline
-              </li>
-              <li class="flex items-center gap-2 text-sm text-text-main font-semibold">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Add-ons available (engagement, albums, etc.)
-              </li>
-            </ul>
-            <button
-              type="button"
-              data-scroll="availability"
-              class="w-full py-4 rounded-lg bg-primary text-black font-bold hover:bg-primary/90 transition-all font-display uppercase tracking-widest text-xs"
-            >
-              Check Your Date
-            </button>
-          </div>
-
           <!-- Bundle -->
           <div class="bg-white p-10 rounded-2xl shadow-sm flex flex-col border border-transparent hover:border-primary transition-all">
             <h3 class="text-2xl font-bold mb-2">Photo + Video Bundle</h3>
@@ -567,6 +559,38 @@
             </button>
           </div>
         </div>
+
+        <!-- Add-ons info box -->
+<div class="mt-10">
+  <div class="bg-white border border-neutral-grey rounded-2xl p-6 md:p-7 flex flex-col md:flex-row md:items-center md:justify-between gap-6">
+    <div class="flex items-start gap-4">
+      <div class="size-11 rounded-full bg-primary/15 flex items-center justify-center border border-primary/25">
+        <span class="material-symbols-outlined text-primary text-2xl">add_circle</span>
+      </div>
+      <div>
+        <p class="font-bold text-lg">Want to level it up?</p>
+        <p class="text-text-sub text-sm font-display mt-1">
+          We offer optional add-ons like <span class="font-semibold text-text-main">drone footage</span>, a
+          <span class="font-semibold text-text-main">360° photo booth</span>, albums, engagement sessions, extra coverage, and more.
+          Tell us what you’re interested in and we’ll recommend the best fit.
+        </p>
+      </div>
+    </div>
+
+    <button
+      type="button"
+      data-scroll="availability"
+      class="w-full md:w-auto bg-primary text-black px-7 py-3 rounded-xl font-bold hover:bg-primary/90 transition-all"
+    >
+      Check Availability
+    </button>
+  </div>
+
+  <p class="mt-3 text-[11px] text-text-sub font-display text-center md:text-left">
+    Add-ons are optional and can be included in custom pricing.
+  </p>
+</div>
+
 
         <div class="mt-16 text-center">
           <button
@@ -1215,6 +1239,38 @@
 
       // Initialize
       setStep(1);
+
+      // Portfolio Load More
+const loadMoreBtn = document.getElementById("loadMoreBtn");
+const loadMoreHint = document.getElementById("loadMoreHint");
+
+if (loadMoreBtn) {
+  const batchSize = 6;
+
+  loadMoreBtn.addEventListener("click", () => {
+    const hiddenItems = Array.from(
+      document.querySelectorAll("#portfolioGrid .portfolio-item.hidden")
+    );
+
+    hiddenItems.slice(0, batchSize).forEach((item) => {
+      item.classList.remove("hidden");
+    });
+
+    const remaining =
+      document.querySelectorAll("#portfolioGrid .portfolio-item.hidden").length;
+
+    if (remaining === 0) {
+      loadMoreBtn.textContent = "All Photos Loaded ✓";
+      loadMoreBtn.disabled = true;
+      loadMoreBtn.classList.add("opacity-60", "cursor-not-allowed");
+      if (loadMoreHint) loadMoreHint.textContent = "You’ve seen them all.";
+    } else {
+      if (loadMoreHint)
+        loadMoreHint.textContent = `${remaining} more photos available.`;
+    }
+  });
+}
+
     </script>
   </body>
 </html>
