Update pricing and service descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+       <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
+
           <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
             <p class="italic text-text-sub mb-6">
               "Mack Media captured moments we didn't even know were happening. The storytelling is just incredible."
@@ -507,16 +508,19 @@
             <div class="text-5xl font-bold mb-8">$1,800 <span class="text-sm text-text-sub font-normal font-display">Starting</span></div>
             <ul class="space-y-4 mb-10 flex-grow font-display">
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Coverage options for smaller timelines
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Full-day wedding photography coverage
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Professionally edited, high-res images
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Candid, story-driven images throughout the day
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Online gallery for easy sharing
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Guided family & couple portraits (no awkward posing)
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Print rights included
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Professionally edited, high-resolution images
+              </li>
+               <li class="flex items-center gap-2 text-sm text-text-sub">
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Private online gallery for easy sharing & downloads
               </li>
             </ul>
             <button
@@ -535,19 +539,22 @@
             <div class="text-5xl font-bold mb-8">$4,275 <span class="text-sm text-text-sub font-normal font-display">Starting</span></div>
             <ul class="space-y-4 mb-10 flex-grow font-display">
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Photography + cinematic videography
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Full-day photography + cinematic videography coverage
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Coordinated coverage for smoother timelines
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Coordinated photo & video team for smoother timelines
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Bundle savings built in
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> 6–10 minute cinematic wedding film
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Ideal for vows, speeches, and emotion you want to relive
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Short highlight reels for sharing
               </li>
               <li class="flex items-center gap-2 text-sm text-text-sub font-medium text-primary">
-                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Best value for preserving your full story
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Ask about additional upgrades (drone footage, 360 photo booth, etc.)
+              </li>
+               <li class="flex items-center gap-2 text-sm text-text-sub font-medium text-primary">
+                <span class="material-symbols-outlined text-primary text-xl">check_circle</span> Best value for preserving your full wedding story
               </li>
             </ul>
             <button
