Revise Trust/Social Proof section in index.html
Updated the Trust/Social Proof section with new content and improved messaging.

--- a/index.html
+++ b/index.html
@@ -196,101 +196,118 @@
       </div>
     </section>
 
-    <!-- Trust / Social Proof -->
-    <section class="py-24 bg-background-light">
-      <div class="max-w-[1200px] mx-auto px-6">
-        <div class="text-center mb-16">
-          <h2 class="text-text-sub uppercase tracking-[0.2em] text-xs font-bold mb-4 font-display">
-            Trusted By Local Couples
-          </h2>
-          <p class="text-4xl md:text-5xl font-bold text-text-main">
-            Trusted by Indianapolis Couples Who Care About Their Story
-          </p>
+<!-- Trust / Social Proof -->
+<section class="py-24 bg-background-light">
+  <div class="max-w-[1200px] mx-auto px-6">
+    <div class="text-center mb-16">
+      <h2 class="text-text-sub uppercase tracking-[0.2em] text-xs font-bold mb-4 font-display">
+        Trusted by Local Couples on The Knot
+      </h2>
 
-          <div class="flex items-center justify-center gap-4 mt-8">
-            <div class="flex text-primary" aria-hidden="true">
-              <span class="material-symbols-outlined fill-[1]">star</span>
-              <span class="material-symbols-outlined fill-[1]">star</span>
-              <span class="material-symbols-outlined fill-[1]">star</span>
-              <span class="material-symbols-outlined fill-[1]">star</span>
-              <span class="material-symbols-outlined fill-[1]">star</span>
-            </div>
-            <span class="font-bold text-lg">5.0 Rating</span>
-            <span class="text-text-sub font-medium">120+ Reviews</span>
-          </div>
+      <p class="text-4xl md:text-5xl font-bold text-text-main">
+        Trusted by Indianapolis Couples Who Trust Mack Media With Their Story
+      </p>
 
-          <div class="mt-10">
-            <button
-              type="button"
-              data-scroll="availability"
-              class="bg-primary text-black px-8 py-3 rounded-lg font-bold hover:bg-primary/90 transition-all"
-            >
-              Check Availability
-            </button>
-            <p class="mt-3 text-[11px] text-text-sub font-display">
-              No spam. Just availability + pricing — fast.
-            </p>
-          </div>
+      <!-- Rating Row -->
+      <div class="flex flex-col sm:flex-row items-center justify-center gap-3 sm:gap-4 mt-8">
+        <div class="flex text-primary" aria-hidden="true">
+          <span class="material-symbols-outlined fill-[1]">star</span>
+          <span class="material-symbols-outlined fill-[1]">star</span>
+          <span class="material-symbols-outlined fill-[1]">star</span>
+          <span class="material-symbols-outlined fill-[1]">star</span>
+          <span class="material-symbols-outlined fill-[1]">star</span>
         </div>
 
-       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <span class="font-bold text-lg">5.0 Rating on The Knot</span>
+        <span class="hidden sm:inline text-text-sub">•</span>
+        <span class="text-text-sub font-medium">120+ Wedding Reviews</span>
+      </div>
 
-          <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
-            <p class="italic text-text-sub mb-6">
-              "Mack Media captured moments we didn't even know were happening. The storytelling is just incredible."
-            </p>
-            <div class="flex items-center gap-3">
-              <div
-                class="size-10 rounded-full bg-cover bg-center"
-                style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBtRpfRMM39pPw_wMo-Is1OsuFo2Zo2gp0YLcpXBZX5m7Y5qi10qoE6STqS_yhgY0AlTQXrXZ5BQTMIz5nvQ4qnSAC4pUJAK9vRDrGROc2KhVmh1rb5JdrCs0oA2aGwcdahG0PNis8b55xDYn7qNABuQ2y7vQXo4kLuoLLEgND2AZRJVlZH1A4qB2nJC_g8wS28iiupU7JYZFVeb1EAVrXct1SeaoNndO0OkW2CQM_tvH6RxZj1d5u3CLfLLDzky6torD4MO0LMtA');"
-                role="img"
-                aria-label="Happy couple smiling"
-              ></div>
-              <div>
-                <p class="font-bold text-sm">Sarah &amp; James</p>
-                <p class="text-xs text-text-sub">Downtown Indy</p>
-              </div>
-            </div>
-          </div>
+      <!-- Award line (subtle, credibility, doesn't compete with CTA) -->
+      <div class="mt-5 flex items-center justify-center gap-2 text-text-sub font-display text-sm">
+        <span aria-hidden="true">🏆</span>
+        <span>
+          The Knot <span class="font-semibold text-text-main">Best of Weddings®</span> Award Winner
+        </span>
+      </div>
+      <p class="mt-1 text-[11px] text-text-sub font-display">
+        Based on recommendations from real wedding couples on The Knot.
+      </p>
 
-          <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
-            <p class="italic text-text-sub mb-6">
-              "A calm presence on a hectic day. We felt so comfortable, and the photos reflect exactly how we felt."
-            </p>
-            <div class="flex items-center gap-3">
-              <div
-                class="size-10 rounded-full bg-cover bg-center"
-                style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuC5_idatIDVrp4z-YhsRXiWwhIJriR2mukc0tX8Q6-hCVnlnLSe3lAt3goyKg5OQl7dTIZPXTYqZVL_e1vLzE3IYI6h4uMEv_7jIfq4I_TMw5M9gtBFy5tnm9Qtv-GioV5k5IEGuYh2jIIP35WqkH6LdydTAFK6bHF4M-us5zstG1yXK0UIvp12E2IjYADbdDr3dMwsgyIEFQr0NWdZPaGLWeM3HzXm070ZeLER5JOCZnLvMzeRMrZeFi6vTl-vEOgyiTk3aQiYtw');"
-                role="img"
-                aria-label="Bride laughing"
-              ></div>
-              <div>
-                <p class="font-bold text-sm">Emily &amp; Michael</p>
-                <p class="text-xs text-text-sub">Northside Indy</p>
-              </div>
-            </div>
-          </div>
+      <!-- CTA -->
+      <div class="mt-10">
+        <button
+          type="button"
+          data-scroll="availability"
+          class="bg-primary text-black px-8 py-3 rounded-lg font-bold hover:bg-primary/90 transition-all"
+        >
+          Check Your Date Availability
+        </button>
+        <p class="mt-3 text-[11px] text-text-sub font-display">
+          No spam. Just availability + pricing — fast.
+        </p>
+      </div>
+    </div>
 
-          <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
-            <p class="italic text-text-sub mb-6">
-              "The turnaround was unreal. We got sneak peeks fast — and the full gallery was worth the wait."
-            </p>
-            <div class="flex items-center gap-3">
-              <div
-                class="size-10 rounded-full bg-cover bg-center"
-                style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCJWTJMmtfKCJPzo9O5-cjydJRAhUNHtzXK12ipS_Ax-Ajl0pUrjbh75vqJ_PuFbC7CyPeQDgOx8ypBN6K61EKMx47L-OBDtnf25Kz2tMUYhDII40O5S6-79MMyS_uIyu-iTgl1fBntsHnJPqp1BM1P9zxdoQoIhvw4thnkd1KQYkaSMnbtICr5QHF_JDQyObKpobaHwbnv1QNE5yAO5lBgWYMsvpImWm3Um_HgevTfZASy-wlCEWYt32SVOb3G4i6afTLWSHN5xg');"
-                role="img"
-                aria-label="Groom smiling"
-              ></div>
-              <div>
-                <p class="font-bold text-sm">Jessica &amp; David</p>
-                <p class="text-xs text-text-sub">Fountain Square</p>
-              </div>
-            </div>
+    <!-- Testimonial cards -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
+        <p class="italic text-text-sub mb-6">
+          "Mack Media captured moments we didn't even know were happening. The storytelling is just incredible."
+        </p>
+        <div class="flex items-center gap-3">
+          <div
+            class="size-10 rounded-full bg-cover bg-center"
+            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBtRpfRMM39pPw_wMo-Is1OsuFo2Zo2gp0YLcpXBZX5m7Y5qi10qoE6STqS_yhgY0AlTQXrXZ5BQTMIz5nvQ4qnSAC4pUJAK9vRDrGROc2KhVmh1rb5JdrCs0oA2aGwcdahG0PNis8b55xDYn7qNABuQ2y7vQXo4kLuoLLEgND2AZRJVlZH1A4qB2nJC_g8wS28iiupU7JYZFVeb1EAVrXct1SeaoNndO0OkW2CQM_tvH6RxZj1d5u3CLfLLDzky6torD4MO0LMtA');"
+            role="img"
+            aria-label="Happy couple smiling"
+          ></div>
+          <div>
+            <p class="font-bold text-sm">Sarah &amp; James</p>
+            <p class="text-xs text-text-sub">Downtown Indy</p>
           </div>
         </div>
       </div>
-    </section>
+
+      <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
+        <p class="italic text-text-sub mb-6">
+          "A calm presence on a hectic day. We felt so comfortable, and the photos reflect exactly how we felt."
+        </p>
+        <div class="flex items-center gap-3">
+          <div
+            class="size-10 rounded-full bg-cover bg-center"
+            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuC5_idatIDVrp4z-YhsRXiWwhIJriR2mukc0tX8Q6-hCVnlnLSe3lAt3goyKg5OQl7dTIZPXTYqZVL_e1vLzE3IYI6h4uMEv_7jIfq4I_TMw5M9gtBFy5tnm9Qtv-GioV5k5IEGuYh2jIIP35WqkH6LdydTAFK6bHF4M-us5zstG1yXK0UIvp12E2IjYADbdDr3dMwsgyIEFQr0NWdZPaGLWeM3HzXm070ZeLER5JOCZnLvMzeRMrZeFi6vTl-vEOgyiTk3aQiYtw');"
+            role="img"
+            aria-label="Bride laughing"
+          ></div>
+          <div>
+            <p class="font-bold text-sm">Emily &amp; Michael</p>
+            <p class="text-xs text-text-sub">Northside Indy</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
+        <p class="italic text-text-sub mb-6">
+          "The turnaround was unreal. We got sneak peeks fast — and the full gallery was worth the wait."
+        </p>
+        <div class="flex items-center gap-3">
+          <div
+            class="size-10 rounded-full bg-cover bg-center"
+            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCJWTJMmtfKCJPzo9O5-cjydJRAhUNHtzXK12ipS_Ax-Ajl0pUrjbh75vqJ_PuFbC7CyPeQDgOx8ypBN6K61EKMx47L-OBDtnf25Kz2tMUYhDII40O5S6-79MMyS_uIyu-iTgl1fBntsHnJPqp1BM1P9zxdoQoIhvw4thnkd1KQYkaSMnbtICr5QHF_JDQyObKpobaHwbnv1QNE5yAO5lBgWYMsvpImWm3Um_HgevTfZASy-wlCEWYt32SVOb3G4i6afTLWSHN5xg');"
+            role="img"
+            aria-label="Groom smiling"
+          ></div>
+          <div>
+            <p class="font-bold text-sm">Jessica &amp; David</p>
+            <p class="text-xs text-text-sub">Fountain Square</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Differentiators -->
     <section class="py-24 bg-neutral-grey">
