--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         font-family: "Playfair Display", serif;
       }
       .material-symbols-outlined {
-        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+        font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
       }
       /* Smooth scroll for anchor jumps */
       html {
@@ -211,11 +211,11 @@
       <!-- Rating Row -->
       <div class="flex flex-col sm:flex-row items-center justify-center gap-3 sm:gap-4 mt-8">
         <div class="flex text-primary" aria-hidden="true">
-          <span class="material-symbols-outlined fill-[1]">star</span>
-          <span class="material-symbols-outlined fill-[1]">star</span>
-          <span class="material-symbols-outlined fill-[1]">star</span>
-          <span class="material-symbols-outlined fill-[1]">star</span>
-          <span class="material-symbols-outlined fill-[1]">star</span>
+          <span class="material-symbols-outlined material-symbols-filled">star</span>
+          <span class="material-symbols-outlined material-symbols-filled">star</span>
+          <span class="material-symbols-outlined material-symbols-filled">star</span>
+          <span class="material-symbols-outlined material-symbols-filled">star</span>
+          <span class="material-symbols-outlined material-symbols-filled">star</span>
         </div>
 
         <span class="font-bold text-lg">5.0 Rating on The Knot</span>
@@ -253,7 +253,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
         <p class="italic text-text-sub mb-6">
-          "Mack Media captured moments we didn't even know were happening. The storytelling is just incredible."
+          "We had an amazing experience using Mack Media to capture our wedding day. Kage did a wonderful job communicating with us before, during, and after our special day to ensure we were all on the same page. He and his team were extremely professional and respectful, working diligently to capture the most important moments of the day. I was truly impressed with their work; they went above and beyond to ensure our satisfaction. I will forever cherish the videos they provided us. They were truly everything we could have asked for in a wedding vendor and more. I cannot recommend Mack Media highly enough!"
         </p>
         <div class="flex items-center gap-3">
           <div
@@ -263,15 +263,14 @@
             aria-label="Happy couple smiling"
           ></div>
           <div>
-            <p class="font-bold text-sm">Sarah &amp; James</p>
-            <p class="text-xs text-text-sub">Downtown Indy</p>
+            <p class="font-bold text-sm">Abigail S.</p>
           </div>
         </div>
       </div>
 
       <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
         <p class="italic text-text-sub mb-6">
-          "A calm presence on a hectic day. We felt so comfortable, and the photos reflect exactly how we felt."
+          "Working with Mack Media Co. was an awesome experience! Kage's eye for detail and creative touch turned every shot into something special. Super professional, thoughtful, and easy to work. The final photos were stunning. Highly recommend!"
         </p>
         <div class="flex items-center gap-3">
           <div
@@ -281,15 +280,14 @@
             aria-label="Bride laughing"
           ></div>
           <div>
-            <p class="font-bold text-sm">Emily &amp; Michael</p>
-            <p class="text-xs text-text-sub">Northside Indy</p>
+            <p class="font-bold text-sm">Michael S.</p>
           </div>
         </div>
       </div>
 
       <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
         <p class="italic text-text-sub mb-6">
-          "The turnaround was unreal. We got sneak peeks fast — and the full gallery was worth the wait."
+          "From start to finish, working with Mack Media was an incredible experience! My husband and I hired them to capture our wedding day, and the final video absolutely blew us away. They were so professional and understood exactly what we wanted. On the day of the wedding, Kage and his crew were incredibly discreet but still managed to capture all the important moments. The editing was flawless and done with such beautiful cinematic quality. They managed to tell our love story in a way that felt authentic and emotional. If you're considering a videographer for your big day, trust me, Mack Media is the one you want!"
         </p>
         <div class="flex items-center gap-3">
           <div
@@ -299,8 +297,7 @@
             aria-label="Groom smiling"
           ></div>
           <div>
-            <p class="font-bold text-sm">Jessica &amp; David</p>
-            <p class="text-xs text-text-sub">Fountain Square</p>
+            <p class="font-bold text-sm">Danielle R.</p>
           </div>
         </div>
       </div>
@@ -1098,8 +1095,8 @@
               <h4 class="font-bold mb-6 text-[10px] uppercase tracking-widest text-primary font-display">Contact</h4>
               <ul class="space-y-4 text-white/60 text-sm font-display">
                 <li>Indianapolis, IN</li>
-                <li><a class="hover:text-white" href="mailto:hello@mackmedia.co">hello@mackmedia.co</a></li>
-                <li><a class="hover:text-white" href="tel:+13175550123">(317) 555-0123</a></li>
+                <li><a class="hover:text-white" href="mailto:hello@mackmedia.co">kage@mackmediaco.com</a></li>
+                <li><a class="hover:text-white" href="tel:+13175550123">(463) 275-6225</a></li>
               </ul>
             </div>
           </div>
