Update testimonials and reviewer names in index.html

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <span class="font-bold text-lg">5.0 Rating on The Knot</span>
         <span class="hidden sm:inline text-text-sub">•</span>
-        <span class="text-text-sub font-medium">120+ Wedding Reviews</span>
+        <span class="text-text-sub font-medium">40+ Verified Reviews</span>
       </div>
 
       <!-- Award line (subtle, credibility, doesn't compete with CTA) -->
@@ -250,37 +250,34 @@
     </div>
 
     <!-- Testimonial cards -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
-        <p class="italic text-text-sub mb-6">
-          "We had an amazing experience using Mack Media to capture our wedding day. Kage did a wonderful job communicating with us before, during, and after our special day to ensure we were all on the same page. He and his team were extremely professional and respectful, working diligently to capture the most important moments of the day. I was truly impressed with their work; they went above and beyond to ensure our satisfaction. I will forever cherish the videos they provided us. They were truly everything we could have asked for in a wedding vendor and more. I cannot recommend Mack Media highly enough!"
-        </p>
-        <div class="flex items-center gap-3">
-          <div
-            class="size-10 rounded-full bg-cover bg-center"
-            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBtRpfRMM39pPw_wMo-Is1OsuFo2Zo2gp0YLcpXBZX5m7Y5qi10qoE6STqS_yhgY0AlTQXrXZ5BQTMIz5nvQ4qnSAC4pUJAK9vRDrGROc2KhVmh1rb5JdrCs0oA2aGwcdahG0PNis8b55xDYn7qNABuQ2y7vQXo4kLuoLLEgND2AZRJVlZH1A4qB2nJC_g8wS28iiupU7JYZFVeb1EAVrXct1SeaoNndO0OkW2CQM_tvH6RxZj1d5u3CLfLLDzky6torD4MO0LMtA');"
-            role="img"
-            aria-label="Happy couple smiling"
-          ></div>
-          <div>
-            <p class="font-bold text-sm">Abigail S.</p>
-          </div>
-        </div>
-      </div>
 
       <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
         <p class="italic text-text-sub mb-6">
           "Working with Mack Media Co. was an awesome experience! Kage's eye for detail and creative touch turned every shot into something special. Super professional, thoughtful, and easy to work. The final photos were stunning. Highly recommend!"
         </p>
         <div class="flex items-center gap-3">
-          <div
-            class="size-10 rounded-full bg-cover bg-center"
-            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuC5_idatIDVrp4z-YhsRXiWwhIJriR2mukc0tX8Q6-hCVnlnLSe3lAt3goyKg5OQl7dTIZPXTYqZVL_e1vLzE3IYI6h4uMEv_7jIfq4I_TMw5M9gtBFy5tnm9Qtv-GioV5k5IEGuYh2jIIP35WqkH6LdydTAFK6bHF4M-us5zstG1yXK0UIvp12E2IjYADbdDr3dMwsgyIEFQr0NWdZPaGLWeM3HzXm070ZeLER5JOCZnLvMzeRMrZeFi6vTl-vEOgyiTk3aQiYtw');"
-            role="img"
-            aria-label="Bride laughing"
-          ></div>
+         <div class="size-10 rounded-full bg-neutral-grey flex items-center justify-center font-bold text-[11px] tracking-wider text-text-main">
+  MS
+</div>
+
           <div>
             <p class="font-bold text-sm">Michael S.</p>
+          </div>
+        </div>
+      </div>
+    
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="p-8 border border-neutral-grey rounded-xl shadow-sm hover:shadow-md transition-shadow bg-white">
+        <p class="italic text-text-sub mb-6">
+          "We had an amazing experience using Mack Media to capture our wedding day. Kage did a wonderful job communicating with us before, during, and after our special day to ensure we were all on the same page. He and his team were extremely professional and respectful, working diligently to capture the most important moments of the day. I was truly impressed with their work; they went above and beyond to ensure our satisfaction. I will forever cherish the videos they provided us. They were truly everything we could have asked for in a wedding vendor and more. I cannot recommend Mack Media highly enough!"
+        </p>
+        <div class="flex items-center gap-3">
+         <div class="size-10 rounded-full bg-neutral-grey flex items-center justify-center font-bold text-[11px] tracking-wider text-text-main">
+  AS
+</div>
+
+          <div>
+            <p class="font-bold text-sm">Abigail S.</p>
           </div>
         </div>
       </div>
@@ -290,12 +287,10 @@
           "From start to finish, working with Mack Media was an incredible experience! My husband and I hired them to capture our wedding day, and the final video absolutely blew us away. They were so professional and understood exactly what we wanted. On the day of the wedding, Kage and his crew were incredibly discreet but still managed to capture all the important moments. The editing was flawless and done with such beautiful cinematic quality. They managed to tell our love story in a way that felt authentic and emotional. If you're considering a videographer for your big day, trust me, Mack Media is the one you want!"
         </p>
         <div class="flex items-center gap-3">
-          <div
-            class="size-10 rounded-full bg-cover bg-center"
-            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCJWTJMmtfKCJPzo9O5-cjydJRAhUNHtzXK12ipS_Ax-Ajl0pUrjbh75vqJ_PuFbC7CyPeQDgOx8ypBN6K61EKMx47L-OBDtnf25Kz2tMUYhDII40O5S6-79MMyS_uIyu-iTgl1fBntsHnJPqp1BM1P9zxdoQoIhvw4thnkd1KQYkaSMnbtICr5QHF_JDQyObKpobaHwbnv1QNE5yAO5lBgWYMsvpImWm3Um_HgevTfZASy-wlCEWYt32SVOb3G4i6afTLWSHN5xg');"
-            role="img"
-            aria-label="Groom smiling"
-          ></div>
+        <div class="size-10 rounded-full bg-neutral-grey flex items-center justify-center font-bold text-[11px] tracking-wider text-text-main">
+  DR
+</div>
+
           <div>
             <p class="font-bold text-sm">Danielle R.</p>
           </div>
